[package]
name = "iced_anim"
description = "A library for creating animations in Iced"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Brady-Simon/iced_anim"
readme = "../README.md"

[dependencies]
iced_core.workspace = true
iced_widget = { workspace = true, optional = true }
iced_anim_derive = { version = "0.2.0", path = "../iced_anim_derive", optional = true }

[features]
derive = ["dep:iced_anim_derive"]
widgets = ["dep:iced_widget", "iced_widget/svg"]